# Django-todo-project

./: .gitignore  docker-compose.yml  pyproject.toml
todo_manager/API_DRF/: apps.py  serializers.py  urls.py  views.py
todo_manager/email_newsletters/management/commands/: send_hello_complex.py
todo_manager/email_newsletters/templates/email_newsletters/: welcome_message.html  welcome_message.txt
todo_manager/templates/: base.html  index.html
todo_manager/templates/components/: navBar.html
todo_manager/todo_list/: admin.py  apps.py  forms.py  mixins.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
todo_manager/todo_list/migrations/: 0001_initial.py  0002_alter_todoitem_description.py  0003_alter_todoitem_options_alter_todoitem_description.py  0004_alter_todoitem_options.py  0005_todoitem_archived.py  0006_alter_todoitem_options_todoitem_owner_todogroup_and_more.py  0007_alter_todoitem_group_alter_todoitem_owner.py  0008_todoitem_execute_time_alter_todoitem_group.py  0009_todoitem_remind_before.py  0010_telegramprofile.py
todo_manager/todo_list/templates/todo_list/: base.html  index.html  todoItem_form.html  todoItem_list.html  todoItem_update_form.html  todogroup_form.html  todoitem_confirm_delete.html  todoitem_detail.html
todo_manager/todo_list/templates/todo_list/components/: todo_items_list.html
todo_manager/todo_list/views_dir/: __init__.py  profileView.py  todoGroupView.py  todoTaskView.py  todoUtilsView.py
todo_manager/todo_manager/: celery.py  settings.py  urls.py
(+2 files in other folders)
