[project]
name = "django-todo-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Konstantin1521",email = "gorbachevskiy.konstantin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
