[project]
name = "django-todo-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Konstantin1521",email = "gorbachevskiy.konstantin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "faststream[rabbit] (>=0.5.48,<0.6.0)",
    "pika (>=1.3.2,<2.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
